Fixed spacing by adding the li tags to the the post_summary page

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -42,7 +42,7 @@ a
   ul
     margin: 20px
   li
-    list-style-type: square
+    list-style-type: none
     font:
       size: 15px
     line-height: 20px
